# portfolio-analyzer

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SETUP_FOR_CLAUDE.md  START_HERE.md  pyproject.toml  requirements-dev.txt  requirements.txt  tags.example.json  writeups.example.json
.github/workflows/: ci.yml
analysis/: dashboard_html.py  enrich.py  portfolio.py  viz.py
claude-skill/portfolio-analysis/: SKILL.md
data_sources/demo/: portfolio.py
data_sources/ibkr/: README.md  portfolio.py
data_sources/snaptrade/: auth.py  client.py  portfolio.py  transactions.py
docs/: sample-analysis.md  target_portfolio.md
scripts/: analyze.py  connect_brokerage.py  pull_snapshot.py  register_snaptrade_user.py
shared/: ai_cycle.py  blackscholes.py  models.py  tagging.py
tests/: test_blackscholes.py
tools/: gen_sample_dashboard.py
trading/: README.md
