[project]
name = "portfolio-analyzer"
version = "0.1.0"
description = "Local, read-only portfolio analyzer: brokerage holdings -> candid, thesis-personalized dashboard + analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

# Runtime deps are pinned loosely in requirements.txt (installed into a venv by the
# setup flow). This file exists for metadata + tooling config, not to build a wheel.

[tool.pytest.ini_options]
# Run from the repo root so `import shared...` resolves without installation.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# Sensible defaults; keep it quiet on the intentionally terse math/dashboard code.
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # long lines are fine in the SVG/template strings
